force-app/main/default/objects/Additional_Payment__c/Additional_Payment__c.object-meta.xml
<CustomObject>
    <label>Additional Payment</label>
    <nameField>
        <label>Additional Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>