force-app/main/default/objects/Additional_Payment__c/fields/Before_1st_Intasllment__c.field-meta.xml
<CustomField>
    <fullName>Before_1st_Intasllment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before 1st Intasllment</label>
    <type>Checkbox</type>
</CustomField>